Add new section

--- a/index.html
+++ b/index.html
@@ -130,6 +130,12 @@
         </p>
       </div>
       <div class="container">
+        <h2 class="header"><span class="darker-color">Chocolate</span> Entrepreneur</h1>
+        <p>
+          Dr. B loves chocolate. He loves chocolate so much in fact that he, like a german bloodhound, can detect people touching his bag of chocolate from a mile away. Not only can he detect chocolate from a mile away and find the most optimal route to get it he hoards it. Like the beloved bridge troll that hordes gold Dr. B holds his chocolate gold in the New Building under his desk. 
+        </p>
+      </div>
+      <div class="container">
         <h2 class="header"><span class="darker-color">Pizza</span> Lover</h1>
         <p>
           
