--- a/index.html
+++ b/index.html
@@ -130,15 +130,9 @@
         </p>
       </div>
       <div class="container">
-        <h2 class="header"><span class="darker-color">Chocolate</span> Entrepreneur</h1>
+        <h2 class="header"><span class="darker-color">Chocolate</span> Keeper</h1>
         <p>
-          Dr. B loves chocolate. He loves chocolate so much in fact that he, like a german bloodhound, can detect people touching his bag of chocolate from a mile away. Not only can he detect chocolate from a mile away and find the most optimal route to get it he hoards it. Like the beloved bridge troll that hordes gold Dr. B holds his chocolate gold in the New Building under his desk. 
-        </p>
-      </div>
-      <div class="container">
-        <h2 class="header"><span class="darker-color">Pizza</span> Lover</h1>
-        <p>
-          
+          Dr. B loves chocolate. His passion for chocolate is so great that, akin to a German Bloodhound, he can sense unwanted hands invading his chocolate stash from over a mile away. At any given moment, he is aware of the most optimal route to his stash under his desk in the New Building where he hoards it like the beloved bridge troll that hordes gold.
         </p>
       </div>
     </div>
