Minor typo correction
"active" changed in the second paragraph to "actively"

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       <div class="container">
         <h2 class="header"><span class="darker-color">Musical</span> Genius</h2>
         <p>
-          When Brian sings, birds from around the world sing with him. When Brian plays the organ, time dilates and world peace is acquired for the duration of his play. The skill Brian possesses is active sought out by billionaires for private commission.
+          When Brian sings, birds from around the world sing with him. When Brian plays the organ, time dilates and world peace is acquired for the duration of his play. The skill Brian possesses is actively sought out by billionaires for private commission.
         </p>
       </div>
       <div class="container">
